# banking-coding-challenge

./: .gitignore  e2etests.sh  main.py  pyproject.toml  readme.md
banking/: api.py  applicationmodel.py  domainmodel.py
tests/: coverage.xml  junit.xml  test_banking_api.py  test_banking_application.py
